fixing the alignment

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -237,6 +237,7 @@ body{
     @media only screen and (max-width: $small-device) {
       h1{
         text-align: left;
+        color: $c4!important;
       }
       .upcoming{
         text-align: left;
